# tarui-hash

./: .gitignore  AI_PROMPT_TAURI.md  LICENSE  README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
icons/: icon.icns
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  hash.rs  main.rs  models.rs
src/components/: FileInput.tsx  HashOutput.tsx  ProgressBar.tsx
src/hooks/: useHash.ts  useSettings.ts
src/types/: index.ts
src/utils/: formatters.ts  validators.ts
