[package]
name = "tauri-hash"
version = "1.0.0"
description = "Professional SHA-256 File Hasher"
authors = ["Tauri Hash256 Team"]
license = "MIT"
repository = "https://github.com/ropean/tauri-hash"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "clipboard-all", "fs-all", "dialog-all", "shell-open"] }
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
